
                CHANGES IN party VERSION 1.0-0 (2012-01-26)

    o    varimp can now partially deal with missing values

    o    Kaplan-Meier curves are now computed _after_ removing
         zero case weights (see comment in ?survfit); plots may change
         slightly.


                CHANGES IN party VERSION 0.9-99996 (2011-12-20)

    o    don't ship doxygen documentation with package

    o    ctree() and cforest() don't handle `-' in formulae,
         warning added to Rd files


                CHANGES IN party VERSION 0.9-99995 (2011-10-27)

    o    observations with missing values in newdata might not have gone 
         with the majority in predict(<ctree>, newdata) when no surrogate 
         split was applicable. Spotted and fixed by 
         Vik <viknesh@stat.ufl.edu>.


                CHANGES IN party VERSION 0.9-99994 (2011-08-22)

    o    reuse classes exported by coin


                CHANGES IN party VERSION 0.9-99993 (2011-07-26)

    o    attach NAMESPACE properly in tests


                CHANGES IN party VERSION 0.9-99992 (2011-05-02)

    o    fix partial matching problems


                CHANGES IN party VERSION 0.9-99991 (2010-11-19)

    o    fix tests/ dependencies


                CHANGES IN party VERSION 0.9-9999 (2010-09-13)

    o    add update slots to tree and forest objects (later to be used
         for crossvalidation)


                CHANGES IN party VERSION 0.9-9998 (2010-08-23)

    o    allow for internal permutations in predict via R_predict2


                CHANGES IN party VERSION 0.9-9997 (2010-07-06)

    o    update mvt.f (see mvtnorm)


                CHANGES IN party VERSION 0.9-9996 (2010-06-24)

    o    print progress bar while forest grows (via trace = TRUE
         in cforest_control())


                CHANGES IN party VERSION 0.9-9995 (2010-05-19)

    o    assignment of observations based on surrogate splits
         during fitting might have failed; observations went