@@ -44,7 +44,7 @@ Objects can be created by calls of the form \code{new("RandomForest", ...)}.
     ### honest (i.e., out-of-bag) cross-classification of 
     ### true vs. predicted classes
     table(mammoexp$ME, predict(cforest(ME ~ ., data = mammoexp, 
-                               control = cforest_classical(ntree = 50)), 
+                               control = cforest_unbiased(ntree = 50)), 
                                OOB = TRUE))
 }
 \keyword{classes}
