@@ -127,7 +127,7 @@ proximity(object)
     ### honest (i.e., out-of-bag) cross-classification of
     ### true vs. predicted classes
     table(mammoexp$ME, predict(cforest(ME ~ ., data = mammoexp, 
-                               control = cforest_classical(ntree = 50)),
+                               control = cforest_unbiased(ntree = 50)),
                                OOB = TRUE))
 
     ### fit forest to censored response
@@ -135,7 +135,7 @@ proximity(object)
 
         data("GBSG2", package = "ipred")
         bst <- cforest(Surv(time, cens) ~ ., data = GBSG2, 
-                   control = cforest_classical(ntree = 50))
+                   control = cforest_unbiased(ntree = 50))
 
         ### estimate conditional Kaplan-Meier curves
         treeresponse(bst, newdata = GBSG2[1:2,], OOB = TRUE)
