@@ -7,17 +7,13 @@ if (!require("coin"))
     stop("cannot load package coin")
 
 data("GlaucomaM", package = "ipred")
-rf <- cforest(Class ~ ., data = GlaucomaM, control = cforest_control(ntree = 100))
+rf <- cforest(Class ~ ., data = GlaucomaM, control = cforest_unbiased(ntree = 100))
 stopifnot(mean(GlaucomaM$Class != predict(rf)) < 
           mean(GlaucomaM$Class != predict(rf, OOB = TRUE)))
 
-stopifnot(all.equal(unique(sapply(rf@weights, sum)), nrow(GlaucomaM)))
-
 data("GBSG2", package = "ipred")
-rfS <- cforest(Surv(time, cens) ~ ., data = GBSG2, control = cforest_control(ntree = 100))
+rfS <- cforest(Surv(time, cens) ~ ., data = GBSG2, control = cforest_unbiased(ntree = 100))
 treeresponse(rfS, newdata = GBSG2[1:2,])
-
-stopifnot(all.equal(unique(sapply(rfS@weights, sum)), nrow(GBSG2)))
 
 ### give it a try, at least
 varimp(rf, pre1.0_0 = TRUE)
