@@ -55,107 +55,102 @@ Copyright M. P. Wand 1997-2009
 +     stop("cannot load package coin")
 > 
 > data("GlaucomaM", package = "ipred")
-> rf <- cforest(Class ~ ., data = GlaucomaM, control = cforest_control(ntree = 100))
+> rf <- cforest(Class ~ ., data = GlaucomaM, control = cforest_unbiased(ntree = 100))
 > stopifnot(mean(GlaucomaM$Class != predict(rf)) < 
 +           mean(GlaucomaM$Class != predict(rf, OOB = TRUE)))
 > 
-> stopifnot(all.equal(unique(sapply(rf@weights, sum)), nrow(GlaucomaM)))
-> 
 > data("GBSG2", package = "ipred")
-> rfS <- cforest(Surv(time, cens) ~ ., data = GBSG2, control = cforest_control(ntree = 100))
+> rfS <- cforest(Surv(time, cens) ~ ., data = GBSG2, control = cforest_unbiased(ntree = 100))
 > treeresponse(rfS, newdata = GBSG2[1:2,])
 $`1`
 records   n.max n.start  events  median 0.95LCL 0.95UCL 
-    579   12028   12028    4813    1990    1814    1990 
+    227    1309    1309     706    1601    1601    1753 
 
 $`2`
 records   n.max n.start  events  median 0.95LCL 0.95UCL 
-    473    4659    4659    2233    1502    1493    1701 
+    241    1349    1349     616    1975    1807    2015 
 
-> 
-> stopifnot(all.equal(unique(sapply(rfS@weights, sum)), nrow(GBSG2)))
 > 
 > ### give it a try, at least
 > varimp(rf, pre1.0_0 = TRUE)
            ag            at            as            an            ai 
- 1.378143e-03  1.209502e-04  2.168549e-03  1.514677e-03  5.667840e-04 
+ 1.111111e-03 -6.944444e-04  2.083333e-03  8.333333e-04  1.805556e-03 
           eag           eat           eas           ean           eai 
- 1.412698e-03  6.944784e-04  1.330209e-04  5.859778e-04  1.107716e-03 
+ 0.000000e+00  5.555556e-04  2.777778e-04  2.777778e-03  5.555556e-04 
          abrg          abrt          abrs          abrn          abri 
- 3.161966e-03  4.259328e-04  2.854476e-03  3.877337e-03  5.508606e-03 
+ 4.166667e-04  5.555556e-04  2.500000e-03  4.722222e-03  3.888889e-03 
           hic          mhcg          mhct          mhcs          mhcn 
- 8.549616e-03  2.230695e-03 -2.072968e-05  5.757744e-04  7.067444e-04 
+ 1.666667e-02  1.388889e-03 -2.775558e-19  4.166667e-03  1.666667e-03 
          mhci          phcg          phct          phcs          phcn 
- 7.905153e-03  9.364023e-03  8.835635e-04 -6.822148e-06  2.760828e-03 
+ 1.166667e-02  6.111111e-03 -2.777778e-04  4.166667e-04  4.027778e-03 
          phci           hvc          vbsg          vbst          vbss 
- 1.532708e-02  5.644047e-03 -5.263158e-04 -2.631579e-04  7.012714e-04 
+ 9.583333e-03  1.944444e-03  2.222222e-03  8.333333e-04  1.111111e-03 
          vbsn          vbsi          vasg          vast          vass 
- 3.487280e-03  8.027564e-03  1.545135e-03  6.978341e-04  1.650312e-04 
+ 0.000000e+00 -2.775558e-19  2.083333e-03  0.000000e+00  0.000000e+00 
          vasn          vasi          vbrg          vbrt          vbrs 
- 2.733615e-04  7.679438e-04  1.833333e-03  1.793247e-05  5.063291e-04 
+ 0.000000e+00  2.500000e-03  8.333333e-04  1.388889e-04  1.250000e-03 
          vbrn          vbri          varg          vart          vars 
- 1.020071e-03  1.314567e-02  2.843290e-02  5.058854e-03  1.968965e-02 
+ 1.111111e-03  6.805556e-03  2.847222e-02  1.111111e-03  1.972222e-02 
          varn          vari           mdg           mdt           mds 
- 1.645358e-02  2.553688e-02 -3.042254e-04  6.796128e-05 -1.097494e-05 
+ 1.500000e-02  2.777778e-02 -1.388889e-04  2.777778e-04 -9.722222e-04 
           mdn           mdi           tmg           tmt           tms 
- 1.545523e-03  8.665070e-04  1.412770e-02 -3.284120e-04  1.052537e-02 
+ 1.111111e-03  6.944444e-04  1.611111e-02  0.000000e+00  9.722222e-03 
           tmn           tmi            mr           rnf          mdic 
--8.831169e-04  9.304242e-03  2.483731e-03  3.580956e-03  5.975207e-03 
+-4.166667e-04  1.666667e-02  2.361111e-03  5.277778e-03  7.222222e-03 
           emd            mv 
- 2.511682e-03  1.100651e-03 
-There were 50 or more warnings (use warnings() to see the first 50)
+ 2.638889e-03 -8.333333e-04 
 > 
 > P <- proximity(rf)
 > stopifnot(max(abs(P - t(P))) == 0)
 > 
 > P[1:10,1:10]
-           2         43         25        65         70         16         6
-2  1.0000000 0.31250000 0.82500000 0.5250000 0.17647059 0.15151515 0.8285714
-43 0.3125000 1.00000000 0.22500000 0.1428571 0.08823529 0.39473684 0.2105263
-25 0.8250000 0.22500000 1.00000000 0.5384615 0.22857143 0.08823529 0.8333333
-65 0.5250000 0.14285714 0.53846154 1.0000000 0.10810811 0.00000000 0.6500000
-70 0.1764706 0.08823529 0.22857143 0.1081081 1.00000000 0.21875000 0.2000000
-16 0.1515152 0.39473684 0.08823529 0.0000000 0.21875000 1.00000000 0.1578947
-6  0.8285714 0.21052632 0.83333333 0.6500000 0.20000000 0.15789474 1.0000000
-5  0.8000000 0.18421053 0.80555556 0.7948718 0.13636364 0.02631579 0.8048780
-12 0.8571429 0.20000000 0.74285714 0.4736842 0.18421053 0.09523810 0.8000000
-63 0.7027027 0.34210526 0.61904762 0.4791667 0.22222222 0.18604651 0.7560976
-            5        12        63
-2  0.80000000 0.8571429 0.7027027
-43 0.18421053 0.2000000 0.3421053
-25 0.80555556 0.7428571 0.6190476
-65 0.79487179 0.4736842 0.4791667
-70 0.13636364 0.1842105 0.2222222
-16 0.02631579 0.0952381 0.1860465
-6  0.80487805 0.8000000 0.7560976
-5  1.00000000 0.8500000 0.7380952
-12 0.85000000 1.0000000 0.7209302
-63 0.73809524 0.7209302 1.0000000
+            2         43         25         65         70         16          6
+2  1.00000000 0.11111111 0.74509804 0.24000000 0.03921569 0.10416667 0.57627119
+43 0.11111111 1.00000000 0.05128205 0.02777778 0.16216216 0.29411765 0.07500000
+25 0.74509804 0.05128205 1.00000000 0.37777778 0.04651163 0.11363636 0.60000000
+65 0.24000000 0.02777778 0.37777778 1.00000000 0.05128205 0.02564103 0.51111111
+70 0.03921569 0.16216216 0.04651163 0.05128205 1.00000000 0.22500000 0.02325581
+16 0.10416667 0.29411765 0.11363636 0.02564103 0.22500000 1.00000000 0.02272727
+6  0.57627119 0.07500000 0.60000000 0.51111111 0.02325581 0.02272727 1.00000000
+5  0.51162791 0.03448276 0.73684211 0.62068966 0.08108108 0.05714286 0.51351351
+12 0.37777778 0.03125000 0.48571429 0.61764706 0.07500000 0.06060606 0.47222222
+63 0.48000000 0.05555556 0.64285714 0.36842105 0.08333333 0.12820513 0.48888889
+            5         12         63
+2  0.51162791 0.37777778 0.48000000
+43 0.03448276 0.03125000 0.05555556
+25 0.73684211 0.48571429 0.64285714
+65 0.62068966 0.61764706 0.36842105
+70 0.08108108 0.07500000 0.08333333
+16 0.05714286 0.06060606 0.12820513
+6  0.51351351 0.47222222 0.48888889
+5  1.00000000 0.81250000 0.39393939
+12 0.81250000 1.00000000 0.42857143
+63 0.39393939 0.42857143 1.00000000
 > 
 > ### variable importances
 > a <- cforest(Species ~ ., data = iris,
 +              control = cforest_unbiased(mtry = 2, ntree = 10))
 > varimp(a, pre1.0_0 = TRUE)
 Sepal.Length  Sepal.Width Petal.Length  Petal.Width 
-   0.0600000    0.0000000    0.3672727    0.2309091 
+  0.08545455   0.00000000   0.29818182   0.21272727 
 > varimp(a, conditional = TRUE)
 Sepal.Length  Sepal.Width Petal.Length  Petal.Width 
- 0.003636364  0.000000000  0.234545455  0.154545455 
+  0.01272727   0.00000000   0.18545455   0.12000000 
 > 
 > airq <- subset(airquality, complete.cases(airquality))
 > a <- cforest(Ozone ~ ., data = airq,
 +              control = cforest_unbiased(mtry = 2, ntree = 10))
 > varimp(a, pre1.0_0 = TRUE)   
    Solar.R       Wind       Temp      Month        Day 
- 18.709803 419.161930 468.897255  12.324762  -5.843064 
+ 96.293668 376.925624 517.674245  -2.456052  27.627480 
 > varimp(a, conditional = TRUE)
    Solar.R       Wind       Temp      Month        Day 
- 21.781398 310.203904 337.112896  -8.277057  14.038489 
+ 65.978262 198.040511 341.221594   2.469503   8.671252 
 > 
 > a <- cforest(ME ~ ., data = mammoexp, control = cforest_classical(ntree = 10))
 > varimp(a, pre1.0_0 = TRUE)   
-      SYMPT          PB        HIST         BSE        DECT 
-0.026676924 0.017718899 0.024070157 0.003977788 0.004566563 
+       SYMPT           PB         HIST          BSE         DECT 
+0.0330240459 0.0204430720 0.0118361515 0.0007600432 0.0023535057 
 Warning messages:
 1: In varimp(a, pre1.0_0 = TRUE) :
   'varimp' with non-unity weights might give misleading results
@@ -179,7 +174,7 @@ Warning messages:
   'varimp' with non-unity weights might give misleading results
 > varimp(a, conditional = TRUE)
       SYMPT          PB        HIST         BSE        DECT 
-0.027007376 0.014911124 0.019483110 0.008703068 0.004605263 
+0.027567506 0.010011961 0.016523930 0.004138910 0.008821166 
 Warning messages:
 1: In varimp(a, conditional = TRUE) :
   'varimp' with non-unity weights might give misleading results
