@@ -31,7 +31,7 @@ try(cforest_control(nresample = 10))
 xo <- ordered(x)
 x[sample(1:length(x), 10)] <- NA
 cforest(y + xo ~ x + z, data = df, 
-        control = cforest_control(ntree = 50))
+        control = cforest_unbiased(ntree = 50))
 
 ### make sure minsplit is OK in the presence of missing values
 ### spotted by Han Lee <Han.Lee@GeodeCapital.com>
@@ -102,7 +102,7 @@ stopifnot(nrow(pr) == nrow(df) || ncol(pr) != 2)
 
 ### varimp with ordered response
 ### spotted by Max Kuhn <Max.Kuhn@pfizer.com>
-test <- cforest(ME ~ ., data = mammoexp, control = cforest_control(ntree = 50))
+test <- cforest(ME ~ ., data = mammoexp, control = cforest_unbiased(ntree = 50))
 stopifnot(sum(abs(varimp(test))) > 0)
 
 ### missing values in factors lead to segfaults on 64 bit systems
